fix: dark mode CSS for application launcher in ubuntu

--- a/dark.css
+++ b/dark.css
@@ -17,6 +17,11 @@
     border-width: 3px;
 }
 
+.pop-shell-search {
+    background: rgba(24, 23, 23, 0.9);
+    color: #BBBBBB;
+}
+
 .pop-shell-search-element:select{
     background: rgba(246, 246, 246, .2);
     border-radius: 5px;
@@ -59,6 +64,10 @@
 
 .pop-shell-tab-urgent {
     background: #D00;
+}
+
+.pop-shell-entry {
+    background: rgba(200, 200, 200, 0.7);
 }
 
 .pop-shell-entry:indeterminate {
